adds wait until

--- a/appium_test/pom.xml
+++ b/appium_test/pom.xml
@@ -32,6 +32,11 @@
         <artifactId>selenium-java</artifactId>
         <version>4.6.0</version> <!-- Or the latest version -->
     </dependency>
+    <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-support</artifactId>
+        <version>4.25.0</version>
+    </dependency>
     </dependencies>
 
 </project>
